--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node ./bin/www",
+    "dev": "node-dev ./bin/www"
   },
   "name": "hello-non-relational-database",
   "description": "--------------------------------------------------------------------------------",
@@ -12,8 +13,10 @@
     "url": "git+https://github.com/aditiadj/hello-non-relational-database.git"
   },
   "keywords": [
+    "mongodb",
     "mongoose",
-    "nodejs"
+    "nodejs",
+    "expressjs"
   ],
   "author": "Aditia Darmadi",
   "license": "MIT",
@@ -22,6 +25,10 @@
   },
   "homepage": "https://github.com/aditiadj/hello-non-relational-database#readme",
   "dependencies": {
+    "express": "^4.16.2",
+    "express-mongoose-generator": "^3.0.3",
+    "lodash": "^4.17.4",
+    "mongodb": "^3.0.2",
     "mongoose": "^5.0.2",
     "node": "^9.4.0",
     "node-dev": "^3.1.3",
